[package]
name = "lokatt"
version = "0.1.0"
authors = ["Mårten Kongstad <marten.kongstad@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossbeam-channel = "0.3.9"
ncurses = "5.99.0"
byteorder = "1.3.2"
chrono = "0.4.9"
